--- a/projekt_raport_marek.qmd
+++ b/projekt_raport_marek.qmd
@@ -191,4 +191,60 @@ print(df.to_string(index=False))
 
 Teraz jak już zadalismy jakie wycieczki odstraszają naszych klientów, zobaczmy jakie wycieczki przyciągają ich.
 
+```{python}
+query= """
+  SELECT tp.client_id, tp.trip_id,t.departure_datetime 
+  FROM trip_participants tp
+  JOIN trips t ON tp.trip_id = t.trip_id
+  ORDER BY tp.client_id, t.departure_datetime;"""
+
+cursor.execute(query)
+results = np.array(cursor.fetchall())
+
+df = pd.DataFrame(results,columns=["client_id","trip_id","departure"])
+
+# Tworzymy kolumnę z kolejną wycieczką klienta
+df['next_trip'] = df.groupby('client_id')['trip_id'].shift(-1)
+
+# Jeśli klient ma kolejną wycieczkę → oznaczamy TRUE
+df['returned_after'] = df['next_trip'].notna()
+
+# Teraz grupujemy po trip_id i liczymy ilu klientów "wróciło po tej wycieczce"
+trip_retention = df[df['returned_after']].groupby('trip_id').size().reset_index(name='clients_returned')
+
+# Sortujemy od największej retencji
+trip_retention = trip_retention.sort_values(by='clients_returned', ascending=False)
+
+top_5_ret_ids = trip_retention.head(5)["trip_id"]
+
+top_5_ret_ids = [int(t) for t in top_5_ret_ids] 
+placeholders = ','.join(['%s'] * len(top_5_ret_ids))
+
+query = f"""
+    SELECT 
+        t.trip_id,
+        d.name AS destination,
+        tt.name AS trip_type,
+        s.name AS spacecraft_name,
+        r.name AS rocket_name
+    FROM trip_participants tp
+    JOIN trips t ON tp.trip_id = t.trip_id
+    JOIN spacecraft s ON t.spacecraft_id = s.spacecraft_id
+    JOIN rockets r ON t.rocket_id = r.rocket_id
+    JOIN destinations d ON t.destination_id = d.destination_id
+    JOIN trip_types tt ON t.trip_type_id = tt.trip_type_id
+    WHERE tp.trip_id IN ({placeholders})
+    GROUP BY t.trip_id, d.name, tt.name
+"""
+
+cursor.execute(query, top_5_ids)
+results = cursor.fetchall()
+
+df = pd.DataFrame(results, columns = ["Id", "Planeta", "Rodzaj", "Spacecraft", "Rakieta"])
+print(df.to_string(index=False))
+
+```
+
+Po wykonaniu kodu który na pewno ja sam napisałem możemy zobaczyć jakie wycieczki są najbardziej zachęcające.
+
 ##
